[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/cbar.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/themes/text_entry_border.tres" type="Theme" id=5]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=6]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=7]
[ext_resource path="res://scenes/contact.gd" type="Script" id=8]
[ext_resource path="res://ui/themes/tooltip.tres" type="Theme" id=9]

[sub_resource type="Animation" id=14]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0, 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.0392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=30]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=26]
draw_center = false
border_width_left = 8
border_width_right = 8
border_color = Color( 0.172549, 0.164706, 0.196078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )
border_width_left = 8
border_width_right = 8
border_color = Color( 0.172549, 0.164706, 0.196078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=27]
resource_name = "next_page"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 1.48988, -91.2009, -1024, -1.55128, 85.4131, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=29]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 560 ), Vector2( 8, 600 ) ]
}

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 7 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="backround/icon"]
autoplay = "icon"
anims/icon = SubResource( 14 )

[node name="title" type="Label" parent="backround"]
margin_left = 320.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "Contact"
align = 1
valign = 1

[node name="indicator" type="Label" parent="backround"]
margin_left = 328.0
margin_top = 504.0
margin_right = 696.0
margin_bottom = 536.0
align = 1
valign = 1

[node name="pages" type="Control" parent="."]
margin_top = 232.0
margin_right = 2048.0
margin_bottom = 544.0

[node name="form" type="Panel" parent="pages"]
margin_left = 320.0
margin_top = 8.0
margin_right = 704.0
margin_bottom = 304.0
custom_styles/panel = SubResource( 10 )

[node name="label" type="RichTextLabel" parent="pages/form"]
margin_left = 16.0
margin_top = 16.0
margin_right = 376.0
margin_bottom = 64.0
theme = ExtResource( 9 )
custom_colors/default_color = Color( 1, 1, 1, 0.627451 )
custom_fonts/normal_font = SubResource( 30 )
bbcode_enabled = true
bbcode_text = "Please enter your phone number and describe your problem below. Alternatively, you can contact the developer directly using the email addresses [color=#3598db][url=asphaleiabrowser@gmail.com]here[/url][/color] or [color=#3598db][url=cybergeek.1943@gmail.com]here[/url][/color]."
text = "Please enter your phone number and describe your problem below. Alternatively, you can contact the developer directly using the email addresses here or here."

[node name="phone_input" type="LineEdit" parent="pages/form"]
margin_left = 64.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 104.0
theme = ExtResource( 5 )
max_length = 20
placeholder_text = "Phone Number"
caret_blink = true

[node name="problem_label" type="Label" parent="pages/form"]
margin_left = 64.0
margin_top = 120.0
margin_right = 128.0
margin_bottom = 134.0
text = "Problem:"
align = 1

[node name="input_focus_shadow" type="Panel" parent="pages/form"]
margin_left = 64.0
margin_top = 136.0
margin_right = 320.0
margin_bottom = 264.0
custom_styles/panel = SubResource( 26 )

[node name="problem_input" type="TextEdit" parent="pages/form"]
margin_left = 64.0
margin_top = 136.0
margin_right = 320.0
margin_bottom = 264.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 25 )
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
smooth_scrolling = true
wrap_enabled = true
caret_blink = true

[node name="send" type="Button" parent="pages/form"]
margin_left = 616.0
margin_top = 312.0
margin_right = 689.0
margin_bottom = 344.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Send"

[node name="successful" type="Panel" parent="pages"]
margin_left = 1336.0
margin_top = 56.0
margin_right = 1736.0
margin_bottom = 176.0
custom_styles/panel = SubResource( 10 )

[node name="label" type="RichTextLabel" parent="pages/successful"]
margin_left = 8.0
margin_top = 8.0
margin_right = 392.0
margin_bottom = 112.0
theme = ExtResource( 9 )
custom_colors/default_color = Color( 1, 1, 1, 0.627451 )
custom_fonts/normal_font = SubResource( 13 )
text = "Thank you for contacting us! It may take a few days for you to receive a response. In the meantime feel free to continue using (if possible) this program as you normaly would.

Note - If you are not connected to the internet the message was not successfully submitted"

[node name="done" type="Button" parent="pages/successful"]
margin_left = 624.0
margin_top = 264.0
margin_right = 697.0
margin_bottom = 296.0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Done"

[node name="AnimationPlayer" type="AnimationPlayer" parent="pages"]
playback_speed = 4.0
anims/next_page = SubResource( 27 )

[node name="cancel" type="Button" parent="."]
margin_left = 8.0
margin_top = 560.0
margin_right = 72.0
margin_bottom = 592.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
text = "Cancel"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="cancel"]
anims/hide = SubResource( 29 )

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "X"
flat = true

[connection signal="meta_clicked" from="pages/form/label" to="." method="_on_label_meta_clicked"]
[connection signal="meta_hover_ended" from="pages/form/label" to="." method="_on_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="pages/form/label" to="." method="_on_label_meta_hover_started"]
[connection signal="text_changed" from="pages/form/problem_input" to="." method="_on_problem_input_text_changed"]
[connection signal="pressed" from="pages/form/send" to="." method="_on_send_pressed"]
[connection signal="meta_clicked" from="pages/successful/label" to="." method="_on_label_meta_clicked"]
[connection signal="meta_hover_ended" from="pages/successful/label" to="." method="_on_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="pages/successful/label" to="." method="_on_label_meta_hover_started"]
[connection signal="pressed" from="pages/successful/done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
